--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
@@ -144,6 +144,8 @@
           <input type="hidden" [(ngModel)]="animalSex" name="animalSex" >
           <input type="hidden" [(ngModel)]="animalSize" name="animalSize" >
           <input type="hidden" [(ngModel)]="typeOfAnimal" name="typeOfAnimal" >
+          <!-- <input type="text" [(ngModel)]="IDshelter" name="IDshelter" > -->
+
 
 
           <button type="submit">Надіслати заявку</button>
@@ -184,6 +186,8 @@
             <input type="hidden" [(ngModel)]="animalSex" name="animalSex" >
             <input type="hidden" [(ngModel)]="animalSize" name="animalSize" >
             <input type="hidden" [(ngModel)]="typeOfAnimal" name="typeOfAnimal" >
+            <!-- <input type="hidden" [(ngModel)]="IDshelter" name="IDshelter" > -->
+
 
 
             <button type="submit">Надіслати заявку</button>
